# General_electrochemistry

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  requirements.txt
Cyt/: equivalent_circuit_inference.py
Dummies_FTV/: figure1.py  harmonic_testing.py
EIS/: 5mv_explorer.py  AIC_best_scores.npy  AIC_results.py  AIC_results_2.py  Alice_data_fitting_2.py  BIC_best_scores.npy  BIC_results.py  BV_animation.py  BV_param_scans.npy  BV_param_scans_best_fits.npy  BV_param_scans_best_fits_circuit_0_a.npy  BV_param_scans_best_fits_circuit_0_first.npy  BV_param_scans_best_fits_circuit_1.npy  BV_param_scans_best_fits_circuit_1_a.npy  BV_param_scans_best_fits_circuit_2.npy  BV_param_scans_best_fits_circuit_2_a.npy  BV_param_scans_best_fits_circuit_3_a.npy  BV_param_scans_for_laviron.npy  BV_param_scans_for_laviron_skipping.npy  BV_param_scans_for_laviron_skipping_2.npy  BV_plotter.py  BV_plotter_dispersed.py  BV_plotter_testing.py  BV_sim.npy  BV_sim_inference.py  BV_sim_inference_mark_circuit.py  Bare_AIC_best_scores.npy  Bare_results.py  Bare_results_".py  Bare_results_1.py  Best_candidates_BV_sim_0.npy  Best_candidates_BV_sim_0_a.npy  Best_candidates_BV_sim_1.npy  Best_candidates_BV_sim_2.npy  Best_candidates_BV_sim_3.npy  Best_candidates_BV_sim_4.npy  Blank_henry_results.py  CPE_time_domain_freqs.py  CPE_time_domain_freqs_sines.py  CPE_time_domain_freqs_sines_imps.py  (+110 more)
dispersion_area/: ramped_dispersion_area_effects.py
heuristics/: 25 exported.txt_4  2d_plot_combined_results.py  2d_plot_results.py  Combined_initial  Combined_initial_1  Combined_initial_good  Combined_initial_long_13  Combined_initial_long_2  Combined_initial_long_3  Combined_initial_results  Combined_initial_scaling_10  Combined_initial_scaling_100  Combined_initial_scaling_1000  EIS_e0  (+28 more)
(+493 files in other folders)
